# VulkanEngine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  DirStackFileIncluder.h  README.md  audio.cc  audio.h  camera.h  demo.cc  empty.cc  engine.cc  engine.h  gltf.cc  gltf.h  gui.h  main.cc  player.cc  player.h  scene.cc  scene.h  settings.cc  settings.h  shader.cc  shader.h  utils.h  vcpkg.json  vulkan.cc  vulkan.h  world.cc  world.h
assets/: Marry.gltf  README.md  ball.gltf  floor.gltf  marry2.gltf
assets/CornellBox/: light.txt  transport.txt
assets/cave/: cave.gltf
examples/: CMakeLists.txt
examples/craft/: CMakeLists.txt  craft.cc  settings.h  world.cc  world.h
examples/craft/meshes/: chunk_mesh.cc  chunk_mesh.h  cloud_mesh.cc  cloud_mesh.h  voxel_marker.cc  voxel_marker.h  water_mesh.cc  water_mesh.h
examples/empty/: CMakeLists.txt  empty.cc
examples/gltf/: CMakeLists.txt  gltf.cc
examples/pbr/: CMakeLists.txt  pbr.cc
examples/prt/: CMakeLists.txt  prt.cc
examples/shadow/: CMakeLists.txt  shadow.cc
examples/ssr/: CMakeLists.txt  ssr.cc
examples/tantalum/: CMakeLists.txt  tantalum.cc
meshes/: chunk_mesh.cc  chunk_mesh.h  cloud_mesh.cc  cloud_mesh.h  voxel_marker.cc  voxel_marker.h  water_mesh.cc  water_mesh.h
shaders/: KullaConty.frag  KullaConty.vert  README.md  blinnPhong.glsl  blinnPhong.h  chunk.frag  chunk.vert  clouds.frag  clouds.vert  constants.h  cube.frag  cube.vert  cubemap.frag  cubemap.vert  floor.frag  floor.vert  gbuffer.frag  gbuffer.vert  marry.frag  pbr.frag  pbr.vert  phong.frag  phong.vert  phong_shadow.frag  phong_shadow.vert  prt.frag  prt.vert  shadow.frag  shadow.glsl  shadow.vert  ssr.frag  ssr.vert  voxel_marker.frag  voxel_marker.vert  water.frag  water.vert
shaders/tantalum/: bsdf.glsl  compose.frag  compose.vert  init.frag  init.vert  pass.frag  ray.frag  ray.vert  scene1.frag  scene2.frag  scene3.frag  scene4.frag  scene5.frag  scene6.frag  scene7.frag  trace.frag
